--- a/src/main/resources/happiness-food.mixins.json
+++ b/src/main/resources/happiness-food.mixins.json
@@ -3,6 +3,7 @@
   "package": "com.sjkz1.mixin",
   "compatibilityLevel": "JAVA_17",
   "mixins": [
+    "HungerManagerMixin",
     "PlayerEntityMixin"
   ],
   "injectors": {
